--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.peterloos.beziersplines"
     android:versionCode="3"
     android:versionName="2.0">
@@ -18,30 +17,38 @@
         android:theme="@style/BezierAppTheme">
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name_for_app_drawer" >
+            android:label="@string/app_name_for_app_drawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activities.SettingsActivity"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.DemonstrationActivity"
             android:label="@string/title_activity_demo"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.DocumentationActivity"
             android:label="@string/title_activity_documentation"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.AboutActivity"
             android:label="@string/title_activity_about"
-            android:parentActivityName=".activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".activities.ConsoleActivity"
+            android:label="Console"
+            android:parentActivityName=".activities.MainActivity">
+
+        </activity>
     </application>
+
 </manifest>
